[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Mechanics/Movement/Movement.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 24.0

[node name="Movement" type="Node2D"]
script = ExtResource( 1 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="Detecter" type="Area2D" parent="."]
position = Vector2( 0, 36 )
collision_layer = 0
collision_mask = 4

[node name="Coll" type="CollisionShape2D" parent="Detecter"]
rotation = 1.5708
shape = SubResource( 1 )

[connection signal="timeout" from="DashTimer" to="." method="_DashTimer_timeout"]
[connection signal="body_entered" from="Detecter" to="." method="_Detecter_body_entered"]
